@@ -1,0 +1,11 @@
+"""
+pglookout - main
+
+Copyright (c) 2016 Ohmu Ltd
+See LICENSE for details
+"""
+
+from . import pglookout
+import sys
+
+sys.exit(pglookout.main())
