@@ -14,6 +14,7 @@ pglookout 1.3.0 (2016-XX-XX)
   have the same replication position
 * `remote_conns` object's keys no longer have functional meaning.  Remote
   addresses are only read from the values of the object.
+* Show version number in pglookout --version
 * Drop support for Python 2.6
 * Add proper support for logging to syslog
 * Various minor bug fixes, refactoring and improved test cases
